--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="web3.html">Web3</a>
             <!-- <a href="#download">Crypto Update</a> -->
             <a href="developer.html">Developers</a>
-            <a href="#" class="btn" >Log in</a>
+            <a href="login_page.html" class="btn" >Log in</a>
         </nav>
         <div class="fas fa-bars"  id="menu-btn"></div>
     </header>
