--- a/index.html
+++ b/index.html
@@ -166,38 +166,38 @@
        <div class="box-container">
            <div class="box">
                <h3>quick links</h3>
-               <a href="#"><i class="fas fa-chevron-right"></i>Home</a>
-               <a href="#"><i class="fas fa-chevron-right"></i>WEB3</a>
-               <a href="#"><i class="fas fa-chevron-right"></i>Crypto update</a>
-               <a href="#"><i class="fas fa-chevron-right"></i>Developers</a>
+               <a href="developer.html" target="_blank" ><i class="fas fa-chevron-right"></i>Home</a>
+               <a href="developer.html" target="_top" ><i class="fas fa-chevron-right"></i>WEB3</a>
+               <a href="developer.html" target="_blank" ><i class="fas fa-chevron-right"></i>Crypto update</a>
+               <a href="developer.html" target="_top" ><i class="fas fa-chevron-right"></i>Developers</a>
             </div>
             
             
             <div class="box">
                 <h3>Learn</h3>
-                <a href="#"><i class="fas fa-chevron-right"></i>Crypto basics</a>
-                <a href="#"><i class="fas fa-chevron-right"></i>Tips and tutorials</a>
-                <a href="#"><i class="fas fa-chevron-right"></i>Advanced trading</a>
-                <a href="#"><i class="fas fa-chevron-right"></i>Futures</a>
-                <a href="#"><i class="fas fa-chevron-right"></i>NFT</a>
+                <a href="developer.html"    target="_top" ><i class="fas fa-chevron-right"></i>Crypto basics</a>
+                <a href="developer.html"    target="_blank" ><i class="fas fa-chevron-right"></i>Tips and tutorials</a>
+                <a href="developer.html"    target="_top" ><i class="fas fa-chevron-right"></i>Advanced trading</a>
+                <a href="developer.html"    target="_blank" ><i class="fas fa-chevron-right"></i>Futures</a>
+                <a href="developer.html"    target="_top" ><i class="fas fa-chevron-right"></i>NFT</a>
            </div>
 
            <div class="box">
                <h3>Support</h3>
-               <a href="#"><i class="fas fa-phone"></i>Help center</a>
-               <a href="#"><i class="fas fa-phone"></i>Contact us</a>
-               <a href="#"><i class="fas fa-envelope"></i>Create account</a>
-               <a href="#"><i class="fas fa-envelope"></i>Supported crypto</a>
-               <a href="#"><i class="fas fa-map-marker-alt"></i>Status</a>
+               <a href="developer.html" target="_top" ><i class="fas fa-phone"></i>Help center</a>
+               <a href="developer.html" target="_blank" ><i class="fas fa-phone"></i>Contact us</a>
+               <a href="developer.html" target="_top" ><i class="fas fa-envelope"></i>Create account</a>
+               <a href="developer.html" target="_blank" ><i class="fas fa-envelope"></i>Supported crypto</a>
+               <a href="developer.html" target="_top" ><i class="fas fa-map-marker-alt"></i>Status</a>
            </div>
 
            <div class="box">
                <h3>Developers</h3>
-               <a href="#">Cloud</a>
-               <a href="#">Wallet SDK</a>
-               <a href="#">crypto Pay SDK</a>
-               <a href="#">Sign in with crypto</a>
-               <a href="#">Prime API</a>
+               <a href="developer.html" target="_top" >Cloud</a>
+               <a href="developer.html" target="_blank" >Wallet SDK</a>
+               <a href="developer.html" target="_top" >crypto Pay SDK</a>
+               <a href="developer.html" target="_blank" >Sign in with crypto</a>
+               <a href="developer.html" target="_top" >Prime API</a>
            </div>
        </div>
 
